# argus

./: .deploy-trigger  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEMO-SCRIPT.md  LICENSE  README.md  SECURITY.md  deploy-docs.sh  deploy-web.sh  docker-compose.yml  package-lock.json  package.json  seed-more-sources.ts  seed-sources.ts
.github/workflows/: deploy.yml
.planning/: HUMINT-ARCHITECTURE-v2.md  HUMINT-ARCHITECTURE.md  PHALA-TEE-SPEC.md  PROJECT.md  REQUIREMENTS.md  ROADMAP-v2.md  ROADMAP.md  STATE.md  claims-verification-feature.md  config.json
apps/api/: Dockerfile  drizzle.config.ts  package.json
apps/api/migrations/: add-article-claims.sql
apps/api/src/: index.ts
apps/api/src/db/: index.ts  schema.ts
apps/api/src/routes/: access.ts  admin.ts  analytics.ts  api-keys.ts  api-v1.ts  articles.ts  auth.ts  (+27 more)
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
contracts/: build.sh
contracts/data-registry/: Cargo.toml
contracts/data-registry/src/: lib.rs
contracts/humint-feed/: Cargo.toml
contracts/humint-feed/src/: lib.rs
contracts/intel-registry/: Cargo.toml  deploy.sh
contracts/intel-registry/src/: lib.rs
contracts/phala-content-gate/: Cargo.toml
contracts/phala-content-gate/src/: lib.rs
contracts/source-list-nft/: Cargo.toml
contracts/source-list-nft/src/: lib.rs
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: intro.md  roadmap.md
docs/docs/api/: articles.md  authentication.md  briefings.md  overview.md  search.md  sources.md  verification.md
docs/docs/features/: access-passes.md  analytics.md  briefings.md  humint.md  intel-bounties.md  near-verification.md  nft-marketplace.md  shade-agent.md  source-lists.md  source-marketplace.md  sources.md  verification.md  zk-proofs.md
docs/docs/getting-started/: configuration.md  first-briefing.md  installation.md
docs/docs/integrations/: bastion.md  shade-agent.md  telegram.md  zcash-escrow.md
docs/docs/self-hosting/: database.md  deployment.md  environment.md
docs/guides/: source-reputation-system.md
docs/src/css/: custom.css
migrations/: 001_add_sources_created_by.sql  002_source_reputation_system.sql  003_api_keys.sql
scripts/: check-sources.js  classify-articles.js  fix-briefings.js  fix-briefings2.js  fix-briefings3.js  secure-server.sh
shade-agent/: Dockerfile  README.md  deployment.yaml  docker-compose.yaml  env.example  package-lock.json  package.json
shade-agent/src/: server.ts  types.d.ts
(+139 files in other folders)
