[package]
name = "argus-data-registry"
version = "0.1.0"
edition = "2021"
authors = ["Argus Intelligence"]
description = "NEAR smart contract for user-owned data registry"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dev-dependencies]
near-sdk = { version = "5.1", features = ["unit-testing"] }
