[package]
name = "intel_registry"
version = "0.1.0"
edition = "2021"
authors = ["Argus Intelligence"]
description = "On-chain verification registry for HUMINT intel proofs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
