[package]
name = "argus_content_gate"
version = "0.1.0"
authors = ["Argus <dev@vitalpoint.ai>"]
edition = "2021"

[dependencies]
ink = { version = "5.0", default-features = false }
pink-extension = "0.6"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

# Crypto
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
ed25519-dalek = { version = "2", default-features = false }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
ink_e2e = "5.0"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "pink-extension/std",
    "scale/std",
    "scale-info/std",
    "aes-gcm/std",
    "ed25519-dalek/std",
]
ink-as-dependency = []
e2e-tests = []
