[package]
name = "argus-source-list-nft"
version = "0.1.0"
edition = "2021"
authors = ["Argus Intelligence"]
description = "NEP-171 NFT contract for Argus source lists"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dev-dependencies]
near-sdk = { version = "5.1", features = ["unit-testing"] }
